# submodule_template

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  readthedocs.yml  requirements_tests.txt  setup.cfg  setup.py
.github/: release.yml
.github/workflows/: build_docs.yml  release_and_publish.yml  testing.yml  unittests.yml
ci/: 310.yaml  311.yaml  36.yaml  37.yaml  38.yaml  39.yaml
doc/: conf.py
doc/_static/: pysal-styles.css
docs/: Makefile
docsrc/: conf.py
notebooks/: example.ipynb
tools/: gitcount.ipynb
